cmake_minimum_required(VERSION 3.6)
project(Marlin_1_1_0_RC3_12_pegasus)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        blinkm.cpp
        blinkm.h
        boards.h
        buzzer.cpp
        buzzer.h
        cardreader.cpp
        cardreader.h
        Conditionals.h
        Configuration.h
        Configuration_adv.h
        configuration_store.cpp
        configuration_store.h
        Default_Version.h
        digipot_mcp4451.cpp
        dogm_bitmaps.h
        dogm_font_data_6x9_marlin.h
        dogm_font_data_HD44780_C.h
        dogm_font_data_HD44780_J.h
        dogm_font_data_HD44780_W.h
        dogm_font_data_ISO10646_1.h
        dogm_font_data_ISO10646_5_Cyrillic.h
        dogm_font_data_ISO10646_CN.h
        dogm_font_data_ISO10646_Kana.h
        dogm_font_data_Marlin_symbols.h
        dogm_lcd_implementation.h
        fastio.h
        language.h
        language_an.h
        language_bg.h
        language_ca.h
        language_cn.h
        language_cz.h
        language_da.h
        language_de.h
        language_en.h
        language_es.h
        language_eu.h
        language_fi.h
        language_fr.h
        language_gl.h
        language_it.h
        language_kana.h
        language_kana_utf8.h
        language_nl.h
        language_pl.h
        language_pt-br.h
        language_pt.h
        language_ru.h
        language_test.h
        M100_Free_Mem_Chk.cpp
        macros.h
        Marlin.h
        Marlin_main.cpp
        MarlinSerial.cpp
        MarlinSerial.h
        mesh_bed_leveling.cpp
        mesh_bed_leveling.h
        pins.h
        pins_3DRAG.h
        pins_5DPRINT.h
        pins_99.h
        pins_AZTEEG_X1.h
        pins_AZTEEG_X3.h
        pins_AZTEEG_X3_PRO.h
        pins_BAM_DICE_DUE.h
        pins_BRAINWAVE.h
        pins_BRAINWAVE_PRO.h
        pins_CHEAPTRONIC.h
        pins_ELEFU_3.h
        pins_FELIX2.h
        pins_GEN3_MONOLITHIC.h
        pins_GEN3_PLUS.h
        pins_GEN6.h
        pins_GEN6_DELUXE.h
        pins_GEN7_12.h
        pins_GEN7_13.h
        pins_GEN7_14.h
        pins_GEN7_CUSTOM.h
        pins_K8200.h
        pins_LEAPFROG.h
        pins_MEGACONTROLLER.h
        pins_MEGATRONICS.h
        pins_MEGATRONICS_2.h
        pins_MEGATRONICS_3.h
        pins_MELZI.h
        pins_MELZI_MAKR3D.h
        pins_MINIRAMBO.h
        pins_MINITRONICS.h
        pins_MKS_BASE.h
        pins_OMCA.h
        pins_OMCA_A.h
        pins_PRINTRBOARD.h
        pins_RAMBO.h
        pins_RAMPS_13.h
        pins_RAMPS_13_EFB.h
        pins_RAMPS_OLD.h
        pins_RIGIDBOARD.h
        pins_RUMBA.h
        pins_SANGUINOLOLU_11.h
        pins_SANGUINOLOLU_12.h
        pins_SAV_MKI.h
        pins_SETHI.h
        pins_STB_11.h
        pins_TEENSY2.h
        pins_TEENSYLU.h
        pins_ULTIMAIN_2.h
        pins_ULTIMAKER.h
        pins_ULTIMAKER_OLD.h
        planner.cpp
        planner.h
        qr_solve.cpp
        qr_solve.h
        SanityCheck.h
        Sd2Card.cpp
        Sd2Card.h
        Sd2PinMap.h
        SdBaseFile.cpp
        SdBaseFile.h
        SdFatConfig.h
        SdFatStructs.h
        SdFatUtil.cpp
        SdFatUtil.h
        SdFile.cpp
        SdFile.h
        SdInfo.h
        SdVolume.cpp
        SdVolume.h
        servo.cpp
        servo.h
        speed_lookuptable.h
        stepper.cpp
        stepper.h
        stepper_indirection.cpp
        stepper_indirection.h
        temperature.cpp
        temperature.h
        thermistortables.h
        u8glib_arduino_v1.15.zip
        ultralcd.cpp
        ultralcd.h
        ultralcd_implementation_hitachi_HD44780.h
        ultralcd_st7920_u8glib_rrd.h
        utf_mapper.h
        vector_3.cpp
        vector_3.h
        watchdog.cpp
        watchdog.h)

add_executable(Marlin_1_1_0_RC3_12_pegasus ${SOURCE_FILES})